Add Unit Testinng for the Feedback Form

--- a/templates/emailTemplate.html
+++ b/templates/emailTemplate.html
@@ -92,7 +92,7 @@
           Need assistance? <a href="#">Contact Us</a> | 
           <a href="#">Unsubscribe</a>
         </p>
-        <p>Event Manager Team | © 2024 Event Manager</p>
+        <p>Event Manager Team | © 2024 EventSync</p>
       </div>
     </div>
   </body>
